Exclude logging code for google analytics from main.py
Exclude the number of entries in a page from main.py

add a config file

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,19 @@
   <title>Python blog system</title> 
   <link rel="stylesheet" type="text/css" href="/css/style.css"/> 
   <meta name = "viewport" content = "width=420"/> 
+{%if google_analytics%}
   <script type="text/javascript"> 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-20245912-2']);
+  _gaq.push(['_setAccount', '{{google_analytics}}']);
   _gaq.push(['_trackPageview']);
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-  </script></head> 
+  </script>
+{%endif%}
+</head> 
 <body> 
 <div id="header">
 {%block header%}
