--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ div.entryFooter{
 div.entryDate{
     font-size: x-small;
 }
+div.body{
+    font-size:small;
+    margin-left:5px;
+}
 h1{
     padding:5px 0 5px 5px;
     border-left:#003399 8px solid;
